2004-06-22  Pascal Obry  <pascal@obry.org>

	* xmlt_proc.adb:
	Catch XML_Fatal_Error to conform to new XML/Ada implementation.

2004-06-21  Pascal Obry  <pascal@obry.org>

	* tmem.adb:
	Add header and CVS tag.

	* tmime.adb, ctab.adb:
	Minor reformatting.

2004-06-20  Pascal Obry  <pascal@obry.org>

	* sto.adb, ssto.adb:
	Use Get_Free_Port.
	Minor reformatting.

	* sp_pck.adb, sto_proc.adb:
	Minor reformatting.

	* sp.adb:
	(Sp): Shutdown the server.
	Minor reformatting.

2004-06-19  Pascal Obry  <pascal@obry.org>

	* tlog.out, unexph2.out:
	Update output.

	* makefile:
	(RT_SOAP): Add soap5.adb.

	* tlog.adb:
	Add missing with clauses.

2004-06-19  Pascal Obry  <pascal@obry.org>

	* soap5.adb, soap5.out:
	Initial revision.

	* back_pack.adb:
	Add some output to track task exceptions.

	* back_pack.ads:
	Set in UNIX format.

	* append_sec.adb:
	Fix copyright header.

	* append_pack.ads, append_pack.adb:
	Minor reformatting.
	Fix copyright header.

	* sslcfg.adb:
	Minor reformatting.

	* soap1.adb, soap2.adb, soap3.adb, soap4.adb:
	Add header.

	* shutdown.adb:
	Add header.
	Use Get_Free_Port.

	* print_tasks.adb:
	Add pragma Warnings Off/On around GNAT specific units.

	* dummy.adb:
	Add header.
	Minor reformatting.

	* auth.adb, disp_soap.adb, sessions.adb, sessions2.adb, sessions3.adb,
	  sessions4.adb, sp.adb, ssback.adb, ssock2.adb, xmlt.adb,
	  xmlt_sec.adb:
	Use Get_Free_Port.

	* append.adb, auth2.adb, disp_soap_sec.adb, file2.adb, head.adb,
	  huge_response.adb, huge_response_sec.adb, moved.adb, multiple.adb,
	  once.adb, param.adb, redirect.adb, sback.adb, server_config.adb,
	  server_info.adb, split.adb, tlog.adb, unexph.adb, unexph2.adb,
	  unexph3.adb, upload2.adb:
	Use Get_Free_Port.
	Update copyright notice.

2004-06-18  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* afile_pack.ads, afile_pack.adb:
	Code of afile regtest, use Get_Free_Port routine.

	* afile.adb:
	Just call AFile_Pack.Run.

	* afile_sec.adb, afile_sec.out:
	Security analog of afile test.