@@ -78,7 +78,7 @@ begin
    Client.Create
      (Connection => Connect,
       Host       => "http://localhost:" & Utils.Image (Port),
-      Timeouts   => (5, 5));
+      Timeouts   => (5.0, 5.0));
 
    Client.Get (Connect, R_Get,  '/' & My_Name);
    Client.Head (Connect, R_Head, '/' & My_Name);
