@@ -104,7 +104,7 @@ begin
    Client.Create
      (Connection => Connect,
       Host       => "http://localhost:" & Utils.Image (Port),
-      Timeouts   => (5, 5));
+      Timeouts   => (5.0, 5.0));
 
    Client.Get (Connect, R, "/do_you_have_it");
 
