@@ -170,7 +170,7 @@ begin
    Client.Create
      (Connection => Connect,
       Host       => Base_URL,
-      Timeouts   => (5, 5));
+      Timeouts   => (5.0, 5.0));
 
    Client.Get (Connect, R, Length_Defined_URI);
    Compare_Message;
